IndexedDB: destroy UniqueIDBDatabase when it's not used https://bugs.webkit.org/show_bug.cgi?id=209532

Reviewed by Geoffrey Garen.

Reviewed by Geoffrey Garen.

When all connections of a UniqueIDBDatabase object are closed and there are no pending reuqests, the
object may not be used any more. We should delete it for better memory use.

* Modules/indexeddb/server/IDBServer.cpp:
(WebCore::IDBServer::IDBServer::removeUniqueIDBDatabase):
(WebCore::IDBServer::IDBServer::closeAndTakeUniqueIDBDatabase): Deleted.
* Modules/indexeddb/server/IDBServer.h:
* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::handleDelete):
(WebCore::IDBServer::UniqueIDBDatabase::connectionClosedFromClient):
(WebCore::IDBServer::UniqueIDBDatabase::tryCloseAndRemoveFromServer):
* Modules/indexeddb/server/UniqueIDBDatabase.h:


Canonical link: https://commits.webkit.org/222512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259034 268f45cc-cd09-0410-ab3c-d52691b4dbfc