Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.cpp
@@ -379,6 +379,8 @@ void UniqueIDBDatabase::handleDelete(IDBConnectionToClient& connection, const ID
 
     m_pendingOpenDBRequests.add(ServerOpenDBRequest::create(connection, requestData));
     handleDatabaseOperations();
+
+    tryCloseAndRemoveFromServer();
 }
 
 void UniqueIDBDatabase::startVersionChangeTransaction()
@@ -946,6 +948,7 @@ void UniqueIDBDatabase::connectionClosedFromClient(UniqueIDBDatabaseConnection& 
             handleDatabaseOperations();
             handleTransactions();
 
+            tryCloseAndRemoveFromServer();
             return;
         }
     }
@@ -961,6 +964,8 @@ void UniqueIDBDatabase::connectionClosedFromClient(UniqueIDBDatabaseConnection& 
     // Now that a database connection has closed, previously blocked operations might be runnable.
     handleDatabaseOperations();
     handleTransactions();
+
+    tryCloseAndRemoveFromServer();
 }
 
 void UniqueIDBDatabase::connectionClosedFromServer(UniqueIDBDatabaseConnection& connection)
@@ -1188,6 +1193,18 @@ void UniqueIDBDatabase::close()
         m_backingStore->close();
         m_backingStore = nullptr;
     }
+}
+
+void UniqueIDBDatabase::tryCloseAndRemoveFromServer()
+{
+    if (m_backingStore && m_backingStore->isEphemeral())
+        return;
+
+    if (hasAnyOpenConnections() || m_versionChangeDatabaseConnection)
+        return;
+
+    close();
+    m_server.removeUniqueIDBDatabase(m_identifier);
 }
 
 RefPtr<ServerOpenDBRequest> UniqueIDBDatabase::takeNextRunnableRequest(RequestType requestType)
