Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.h
@@ -136,6 +136,7 @@ private:
     void deleteBackingStore();
     void didDeleteBackingStore(uint64_t deletedVersion);
     void close();
+    void tryCloseAndRemoveFromServer();
 
     bool isCurrentlyInUse() const;
     void clearStalePendingOpenDBRequests();
